--- a/chat.css
+++ b/chat.css
@@ -27,7 +27,6 @@ body {
     display: none;
     margin: 0 auto;
     overflow: auto;
-    max-height: 70vh;
   }
   
 .copy-button {
@@ -36,3 +35,13 @@ body {
   right: 5px;
   margin: 0 5px 5px 0;
 }
+
+#scroll-wrapper {
+  padding-bottom: 5.5rem;
+}
+
+#input-area {
+  position: fixed;
+  bottom: 0;
+}
+
